--- a/tf/s1/1.ipynb
+++ b/tf/s1/1.ipynb
@@ -2,26 +2,84 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Deprecation warnings have been disabled. Set TF_ENABLE_DEPRECATION_WARNINGS=1 to re-enable them.\n"
+      "WARNING:tensorflow:From /tmp/ipykernel_6561/3280745490.py:3: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "b'hello world'\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-06 15:09:21.766743: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcudart.so.12\n"
+      "2023-03-06 15:11:45.869384: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcuda.so.1\n",
+      "2023-03-06 15:11:46.448872: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1674] Found device 0 with properties: \n",
+      "name: Tesla V100-SXM2-32GB major: 7 minor: 0 memoryClockRate(GHz): 1.53\n",
+      "pciBusID: 0000:65:01.0\n",
+      "2023-03-06 15:11:46.448924: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcudart.so.12\n",
+      "2023-03-06 15:11:46.493857: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcublas.so.12\n",
+      "2023-03-06 15:11:46.498126: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcufft.so.11\n",
+      "2023-03-06 15:11:46.498622: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcurand.so.10\n",
+      "2023-03-06 15:11:46.503436: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcusolver.so.11\n",
+      "2023-03-06 15:11:46.504789: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcusparse.so.12\n",
+      "2023-03-06 15:11:46.505009: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcudnn.so.8\n",
+      "2023-03-06 15:11:46.505543: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1802] Adding visible gpu devices: 0\n",
+      "2023-03-06 15:11:46.515083: I tensorflow/core/platform/profile_utils/cpu_utils.cc:109] CPU Frequency: 2399995000 Hz\n",
+      "2023-03-06 15:11:46.515701: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x3b483d0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2023-03-06 15:11:46.515738: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "2023-03-06 15:11:46.578231: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x19096a0 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
+      "2023-03-06 15:11:46.578272: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Tesla V100-SXM2-32GB, Compute Capability 7.0\n",
+      "2023-03-06 15:11:46.578808: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1674] Found device 0 with properties: \n",
+      "name: Tesla V100-SXM2-32GB major: 7 minor: 0 memoryClockRate(GHz): 1.53\n",
+      "pciBusID: 0000:65:01.0\n",
+      "2023-03-06 15:11:46.578870: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcudart.so.12\n",
+      "2023-03-06 15:11:46.578893: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcublas.so.12\n",
+      "2023-03-06 15:11:46.578903: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcufft.so.11\n",
+      "2023-03-06 15:11:46.578913: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcurand.so.10\n",
+      "2023-03-06 15:11:46.578921: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcusolver.so.11\n",
+      "2023-03-06 15:11:46.578930: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcusparse.so.12\n",
+      "2023-03-06 15:11:46.578940: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcudnn.so.8\n",
+      "2023-03-06 15:11:46.579483: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1802] Adding visible gpu devices: 0\n",
+      "2023-03-06 15:11:46.579558: I tensorflow/stream_executor/platform/default/dso_loader.cc:50] Successfully opened dynamic library libcudart.so.12\n",
+      "2023-03-06 15:11:46.588174: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1214] Device interconnect StreamExecutor with strength 1 edge matrix:\n",
+      "2023-03-06 15:11:46.588270: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1220]      0 \n",
+      "2023-03-06 15:11:46.588304: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1233] 0:   N \n",
+      "2023-03-06 15:11:46.589099: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1359] Created TensorFlow device (/job:localhost/replica:0/task:0/device:GPU:0 with 31137 MB memory) -> physical GPU (device: 0, name: Tesla V100-SXM2-32GB, pci bus id: 0000:65:01.0, compute capability: 7.0)\n"
      ]
     }
    ],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "hello = tf.constant(\"hello world\")\n",
+    "sess = tf.Session()\n",
+    "print(sess.run(hello))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Operation():\n",
+    "    def __init__(self, input_nodes = []):\n",
+    "        self.input_nodes = input_nodes\n",
+    "        self.output_nodes = []\n",
+    "        \n",
+    "        for node in input_nodes:\n",
+    "            node.input_nodes.append(self)\n",
+    "    \n",
+    "    def comput(self):\n",
+    "        pass\n",
+    "\n",
+    "class add():\n",
+    "    def __init__()"
    ]
   }
  ],
